index & style file updated

--- a/Style.css
+++ b/Style.css
@@ -2,14 +2,14 @@ body{
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   margin:0;
-  background-color: rgb(236, 155, 155);
+  background-color: rgb(0, 0, 0);
   color: white;
   overflow: hidden;
 }
 
 .main{
     display: flex;
-    height: 100vh;
+    height:90vh;
     padding: 0.6rem;
 }
 
@@ -146,15 +146,12 @@ a{
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0 1rem 0;
+    z-index: 1;
 }
 
 .sticky-nav-icons{
     margin-left: 0.75rem;
     font-size: 2rem;
-}
-
-.sticky-nav-icons img{
- 
 }
 
 .sticky-nav-option{
@@ -174,6 +171,7 @@ a{
 
 .nav-item{
     margin-right: 1rem;
+    margin-top: 0.25rem;
 }
 
 
@@ -183,21 +181,48 @@ a{
     }
 }
 
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+
+}
 
 .card{
     background-color: #232323;
     width: 150px;
     border-radius: 0.5rem;
     padding: 1rem;
+    margin: 1.25rem;
+    margin-top: 1rem;
 }
  
 .card-img{
     width: 100%;
     border-radius: 0.5rem;
+
 }
 
-.card-title
+.card-title{
+    font-weight: 600;
+}
 
-.card-container{
+.card-info{
+    font-size: 0.85rem;
+    opacity: 0.8;
+}
+
+.footer{
+    height: 30vh;
     display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.line{
+    height: 50%;
+    width: 95%;
+    border-top: 2px solid white;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.4;
 }
