--- a/Style.css
+++ b/Style.css
@@ -74,10 +74,10 @@ a{
 .library{   
     background-color: #121212;
     border-radius: 1rem;
-    height: 100%;
+    height:600px;
     margin-top: 0.75rem;
     padding: 0.5rem 0.75rem ;
-   
+    
     
 }
 .options{
@@ -226,3 +226,62 @@ a{
     justify-content: center;
     opacity: 0.4;
 }
+
+/* ------------------------------------------------------------------------------------------ */
+
+.music-player{
+    width: 100%;
+    height: 65px;
+    margin-bottom:0.25rem;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 0 0.5rem 0 ;
+}
+
+.album{
+   height: 100%;
+   width:25%;
+   display: flex;
+   align-items: center;
+}
+
+.album-img{
+    height: 56px;
+    width: 56px;
+    margin-right: 1rem;
+     margin-left: 0.5rem;
+}
+
+.album-para{
+    width: 14rem;
+}
+
+
+#album-p1{
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0;
+}
+
+#album-p2{
+    font-size: 12px;
+    font-weight: 400;
+    margin: 0;
+    margin-top: 0.24rem;
+}
+.album-item{
+    width: 5rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.album-icon{
+    margin: 0 0.2rem 0 0.2rem;
+}
+
+
+.player{
+    
+}
+
+
